# eida-statistics-aggregator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml  pypi.yml  test.yml
src/eida_statistics_aggregator/: aggregator.py  eida_statistic.py  stat_collection.py
tests/: smoke_test.py  test_fdsn_exceptions.py  test_issue_1.py  test_stat_collection.py
