[project]
name = "eida-statistics-aggregator"
version = "0.6.2"
description = "Aggregates and anonymize data distribution logs from seiscomp, ready to be sent to the central EIDA KPI service."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "fdsnnetextender==3.3.0",
    "mmh3>=5.2.0",
    "python-hll2>=1.0.0",
    "python-magic>=0.4.27",
    "requests>=2.32.5",
]


[project.scripts]
eida_stats_aggregator = "eida_statistics_aggregator.aggregator:cli"


[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest]
minversion = "9.0"
python_files = ["*_tests.py", "test_*.py", "tests/*.py"]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
  "ANN", # Any-type
  "COM812", # Missing-trailing-comma
  "D",      # Docstrings stuff. Ignore for now
  "ISC001", # As demanded by ruff format
]
output-format = "concise"
